@@ -1,6 +1,10 @@
 devel
 -----
 
+* BTS-209: Fixed requests to `_admin/execute` treating every payload as plain 
+  text when they're in JSON or velocypack format, but will only treat the 
+  payload as velocypack if specified in the header's `content-type`.
+
 * Fixed GitHub issue #17291: Fixed a server crash which could occur in case an
   AQL query using a PRUNE or FILTER statement, combined with UDFs (user defined
   functions), got executed.
